fix: warning in terminal | update README